--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,19 +1,21 @@
 <ol class='post-list'>
-   <li>
-      <article class='post'>
-         <div class='title'>
-            <a href='{{post_url}}' target='_blank'>{{title}}</a>
-            <span>({{post_url}})</span>
-         </div>
-         <div class='meta'>
-            {{vote_count}}
-            points by
-            {{user.username}}
-            on
-            {{created_at}}
-            |
-            <a href='/post/{{id}}'>{{comments.length}} comments</a>
-         </div>
-      </article>
-   </li>
+   {{#each posts as |post|}}
+      <li>
+         <article class='post'>
+            <div class='title'>
+               <a href='{{post.post_url}}' target='_blank'>{{post.title}}</a>
+               <span>({{post.post_url}})</span>
+            </div>
+            <div class='meta'>
+               {{post.vote_count}}
+               points by
+               {{post.user.username}}
+               on
+               {{post.created_at}}
+               |
+               <a href='/post/{{post.id}}'>{{post.comments.length}} comments</a>
+            </div>
+         </article>
+      </li>
+   {{/each}}
 </ol>
