--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,7 +18,7 @@
       <input type='text' id='username-signup' />
    </div>
    <div>
-      <label for='email-signup'>password:</label>
+      <label for='email-signup'>email:</label>
       <input type='text' id='email-signup' />
    </div>
    <div>
@@ -29,3 +29,7 @@
       <button type='submit'>signup</button>
    </div>
 </form>
+<!-- It's important to keep in mind that the front-end JavaScript code will not be sent over to the client
+ at the same time as the HTML content. The browser will make a new request for the JavaScript file after 
+the template has rendered and it sees the linked <script> element. -->
+<script src="/javascript/login.js"></script>
