--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
                <a href='/'>Just Tech News</a>
             </h1>
             <nav>
+               <button id='logout' class='btn-no-style'>logout</button>
                <a href='/login'>login</a>
             </nav>
          </header>
@@ -23,4 +24,5 @@
          </footer>
       </div>
    </body>
+<script src='/javascript/logout.js'></script>
 </html>
