Created Comments partial.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,9 @@
 <ol class='post-list'>
-   {{!-- {{#each posts as |post|}} --}}
-   {{#each posts}}
+   {{#each posts as |post|}}
+   {{!-- {{#each posts}} --}}
       <li>
-         {{!-- {{> post-info post}} --}}
-         {{> post-info }}
+         {{> post-info post}}
+         {{!-- {{> post-info }} --}}
       </li>
    {{/each}}
 </ol>
